<resources>
    <string name="app_name">Restaurant_UI</string>
    <string name="hello_world">Hello World!</string>
    <string name="pita">Pita with shnitzel</string>
    <string name="NIS35">35NIS</string>
    <string name="salad">Salad plate</string>
    <string name="NIS20">20NIS</string>
    <string name="drinkable_drink">Drinkable Drink</string>
    <string name="NIS5">5NIS</string>
    <string name="water">Water</string>
    <string name="NIS3">3NIS</string>
    <string name="number_of_diners">Number of diners</string>
    <string name="pita_image">Pita image</string>
    <string name="payment_method">Payment method:</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="payment_app">Payment app</string>
    <string name="from_when_to_reserve">For when to reserve?</string>
    <string name="date">Date</string>
    <string name="pick">Pick</string>
    <string name="any_vegans">Any vegans?</string>
    <string name="no_one_is_vegan">No one is vegan</string>
    <string name="reserve_sits" translatable="false">Confirmed, reserving sits</string>
    <string name="reserve_information" translatable="false">Reserve Information</string>
    <string name="summary" translatable="false">Summary:</string>
    <string name="date_reserved_at" translatable="false">Date reserved: %1$s at %2$s</string>
    <string name="edit_and_return" translatable="false">edit and return</string>
    <string name="water_bottle_description">Water bottle and a clean glass</string>
    <string name="drinkable_drink_description">Green and yellow soft drinks</string>
    <string name="salad_plate_description">Salad of tomatos, onions and lettuce</string>
    .

    <string-array name="vegan_options">
        <item>None</item>
        <item>Vegan</item>

    </string-array>
    <string name="pita_with_shnitzel_description">Pita with shnitzel</string>

</resources>